--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -40,7 +40,6 @@ ul {
   gap: 8px;
   justify-content: space-between;
   margin-top: 36px;
-  /* margin-bottom: 32px; */
 }
 
 .search-input {
@@ -61,6 +60,14 @@ ul {
   padding-top: 8px;
 }
 
+.search-input:hover {
+  border-color: 1px solid #000;
+}
+
+.search-input:active {
+  border-color: 1px solid #4e75ff;
+}
+
 .search-btn {
   display: block;
   border: none;
@@ -72,6 +79,10 @@ ul {
   color: #fff;
   background-color: #4e75ff;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.search-btn:hover {
+  background-color: #6c8cff;
 }
 
 .gallery-container {
@@ -87,6 +98,12 @@ ul {
   gap: 24px;
   justify-content: center;
   align-items: center;
+}
+
+.loader-wrap {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .loader {
@@ -113,11 +130,36 @@ ul {
   }
 }
 
+.loader-text {
+  display: none;
+  letter-spacing: 0.04em;
+}
+
+.btn-load-more {
+  display: block;
+  border: none;
+  cursor: pointer;
+  border-radius: 8px;
+  padding: 8px 16px;
+  margin: 0 auto;
+  margin-top: 32px;
+  width: 125px;
+  height: 40px;
+  color: #fff;
+  background-color: #4e75ff;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.is-hidden {
+  display: none;
+}
+
+.btn-load-more:hover {
+  background-color: #6c8cff;
+}
+
 .gallery-item {
   width: calc((100% - 24px * 2) / 3);
-  /* border-top: 1px solid #808080;
-  border-left: 1px solid #808080;
-  border-right: 1px solid #808080; */
 }
 
 .gallery-item img {
@@ -125,10 +167,6 @@ ul {
   height: 200px;
   transition: transform 0.3s ease;
 }
-
-/* .gallery-item img:hover {
-  transform: scale(1.044);
-} */
 
 .gallery-image {
   border: 1px solid #808080;
@@ -141,7 +179,6 @@ ul {
 .image-info-wrap {
   display: flex;
   justify-content: space-between;
-
   padding: 4px 20px;
   border: 1px solid #808080;
   border-top: none;
@@ -166,9 +203,22 @@ ul {
   text-align: center;
 }
 
-/* .loader-wrap {
-  display: flex;
-  justify-content: center;
-  display: block;
-  margin: 0 auto;
-} */
+.up-button {
+  position: fixed;
+  bottom: 50px;
+  right: 50px;
+  width: 50px;
+  height: 50px;
+  border: none;
+  border-radius: 50%;
+  background-color: #4e75ff;
+  color: white;
+  font-size: 18px;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  z-index: 1000;
+}
+
+.up-button:hover {
+  background-color: #6c8cff;
+}
